tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/gateway/http_redirect_when_vs_port_specify_https/to_b/_test_context/Gateway-VirtualService.3764907341.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: echo-2-20468
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: b.echo-2-20468.svc.cluster.local
  namespace: echo-2-20468
spec:
  gateways:
  - gateway
  hosts:
  - b.echo-2-20468.svc.cluster.local
  http:
  - route:
    - destination:
        host: b.echo-2-20468.svc.cluster.local
        port:
          number: 443
